Minor doc improvement for gc analysis